--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "basic_math",
   "version": "1.0.0",
   "description": "A module providing basic and advanced mathematical functions.",
-  "main": "index.js",
+  "main": "test.js",
   "scripts": {
     "test": "node test.js"
   },
