--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic_math",
+  "name": "math_operations_kit",
   "version": "2.0.0",
   "description": "A module providing basic and advanced mathematical functions.",
   "main": "test.js",
